--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Noticiero
 author: FixMyBlock
-url: https://www.abhinavsaxena.com/moonwalk # root address of the site
+#url: https://www.abhinavsaxena.com/moonwalk # root address of the site
 description: > # description of the site (multiple lines allowed)
   Acá se publican noticias, ¿qué esperabas? :)
 
