--- a/_data/home.yml
+++ b/_data/home.yml
@@ -5,6 +5,7 @@ navbar_entries:
   - title: blog
     url: blog
 
+project_entries:
   - title: Project 1
     url: overview-post
     desc: This is an example project, configured in _data/home.yml
